# Cflux

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  enum_inherit.flx  replit.md  replit.nix  soon.txt
docs/: 01-getting-started.md  02-cli.md  03-language-basics.md  04-control-flow.md  05-functions.md  06-classes-and-objects.md  07-structs.md  08-enums.md  09-error-handling.md  10-async-await.md  11-modules.md  12-builtins.md  13-type-methods.md  14-stdlib-io.md  15-stdlib-math.md  16-stdlib-os.md  17-stdlib-sys.md  18-stdlib-json.md  19-stdlib-time.md  20-stdlib-fs.md  21-stdlib-socket.md  22-stdlib-async-aio.md  23-stdlib-thread.md  24-ext-http.md  25-ext-mysql.md  26-ext-postgresql.md  27-ext-ws.md  28-ext-concurrent.md  29-ffi.md  30-native-extensions.md  31-package-manager.md  32-c-api.md  33-internals-vm.md  34-internals-gc.md  35-internals-compiler.md  36-project-structure.md  37-unsupported-conditions.md  index.md  language-reference.md  modules.md  (+2 more)
examples/: async_demo.flx  classes.flx  dns_lookup.flx  http_get.flx  http_server.flx  libsocket_tcp.flx  shell_example.flx  tcp_echo.flx  test_async_bukti_nyata.flx  test_async_user_func.flx  test_exceptions.flx  test_python_style_async.flx  test_stdlib.flx  udp_demo.flx
examples/modules/: test_from_import_star.flx
extension/concurrent/: Makefile  concurrent.h  concurrent_ext.c  thread_pool.c  transport.c
extension/http/: Makefile  http_ext.c
extension/libsocket/: Makefile  libsocket_ext.c
extension/mysql/: Makefile  mysql_ext.c
extension/postgresql/: Makefile  postgresql_ext.c
extension/ws/: Makefile  ws_ext.c
include/flux/: ast.h  chunk.h  common.h  compiler.h  ext_helpers.h  extension.h  flux.h  gc.h  lexer.h  object.h  parser.h  value.h  vm.h
src/: main.c
src/api/: api.c
src/ast/: ast.c
src/compiler/: compiler.c
src/gc/: gc.c
src/lexer/: lexer.c
src/object/: object.c
src/parser/: parser.c
src/runtime/: runtime.c
src/stdlib/: stdlib.c  stdlib_core.c  stdlib_fs.c  stdlib_internal.h  stdlib_io.c  stdlib_json.c  stdlib_math.c  stdlib_os.c  stdlib_sys.c  stdlib_time.c
src/tools/: build.c  doc.c  fmt.c  lint.c  pkg.c  tools.h
src/util/: util.c
src/vm/: chunk.c  vm.c
stdlib/aio/: Makefile  async_ext.c
stdlib/async/: Makefile
stdlib/dns/: Makefile  dns_ext.c
stdlib/fs/: Makefile  fs_module.c
stdlib/http/: Makefile  http_ext.c
stdlib/io/: Makefile  io_module.c
stdlib/json/: Makefile  json_module.c
stdlib/math/: Makefile  math_module.c
stdlib/native/: Makefile  native_module.c
stdlib/net/: Makefile  net_ext.c
stdlib/os/: Makefile  os_module.c
stdlib/shell/: Makefile  shell_module.c
stdlib/socket/: Makefile  socket_module.c
stdlib/sys/: Makefile  sys_module.c
stdlib/thread/: Makefile  thread_module.c
stdlib/time/: Makefile  time_module.c
tests/: bug_hunt_async.flx  bug_hunt_builtins.flx  bug_hunt_classes.flx  bug_hunt_closures.flx  bug_hunt_control.flx  bug_hunt_dicts.flx  bug_hunt_edge.flx  bug_hunt_error_handling.flx  bug_hunt_lists.flx  bug_hunt_math.flx  bug_hunt_scope.flx  bug_hunt_strings.flx  bug_hunt_types.flx  classes.flx  closures.flx  edge_cases.flx  fibonacci.flx  hello.flx  http_server_demo.flx  http_server_test.flx  mysql_extension.flx  new_syntax.flx  postgresql_extension.flx  shell_example.flx  test_arithmetic.flx  test_arithmetic.md  test_async.flx  test_class_edge.flx  test_control.flx  test_decorators.flx  test_dict_edge.flx  test_divzero.flx  test_enum.flx  test_error_handling_edge.flx  test_fstring.flx  test_functional.flx  test_gc.c  test_is_file_dir.flx  test_lambda.flx  test_let_const.flx  (+27 more)
tests/modules/: greeter.flx  main.flx  mathutils.flx  test_from_import.flx  test_from_import_alias.flx
